load("//bazel:zkx_cc.bzl", "zkx_cc_library", "zkx_cc_unittest")

package(default_visibility = ["//visibility:public"])

zkx_cc_library(
    name = "activate_context",
    hdrs = ["activate_context.h"],
    deps = [":namespace_alias"],
)

zkx_cc_library(
    name = "allocator_stats",
    srcs = ["allocator_stats.cc"],
    hdrs = ["allocator_stats.h"],
    deps = [
        ":namespace_alias",
        "@com_google_absl//absl/strings:str_format",
    ],
)

zkx_cc_library(
    name = "bit_pattern",
    srcs = ["bit_pattern.cc"],
    hdrs = ["bit_pattern.h"],
    deps = [
        ":namespace_alias",
        "@com_google_absl//absl/strings",
    ],
)

zkx_cc_library(
    name = "command_buffer",
    hdrs = ["command_buffer.h"],
    deps = [
        ":bit_pattern",
        ":device_memory",
        ":kernel",
        ":launch_dim",
        "//xla/tsl/lib/gtl:int_type",
        "//xla/tsl/platform:errors",
        "@com_google_absl//absl/functional:any_invocable",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "device_description",
    hdrs = ["device_description.h"],
    deps = [
        ":launch_dim",
        ":semantic_version",
        "//xla/tsl/lib/math:math_util",
        "//zkx/base:logging",
    ],
)

zkx_cc_library(
    name = "device_memory",
    hdrs = ["device_memory.h"],
    deps = [
        ":namespace_alias",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/log:check",
    ],
)

zkx_cc_library(
    name = "device_memory_allocator",
    hdrs = ["device_memory_allocator.h"],
    deps = [
        ":device_memory",
        ":platform",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:status",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
    ],
)

zkx_cc_library(
    name = "event",
    hdrs = ["event.h"],
    deps = [
        ":namespace_alias",
        "@com_google_absl//absl/status",
    ],
)

zkx_cc_library(
    name = "event_based_timer",
    hdrs = ["event_based_timer.h"],
    deps = [
        ":namespace_alias",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/time",
    ],
)

zkx_cc_library(
    name = "host_or_device_scalar",
    hdrs = ["host_or_device_scalar.h"],
    deps = [
        ":device_memory",
        "@com_google_absl//absl/log:check",
    ],
)

zkx_cc_library(
    name = "kernel",
    srcs = ["kernel.cc"],
    hdrs = ["kernel.h"],
    deps = [
        ":device_memory",
        ":launch_dim",
        ":stream",
        "@com_google_absl//absl/container:inlined_vector",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "kernel_spec",
    srcs = ["kernel_spec.cc"],
    hdrs = ["kernel_spec.h"],
    deps = [
        ":namespace_alias",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "launch_dim",
    hdrs = ["launch_dim.h"],
    deps = [
        ":namespace_alias",
        "@com_google_absl//absl/strings",
    ],
)

zkx_cc_library(
    name = "memory_allocation",
    hdrs = ["memory_allocation.h"],
    deps = [":namespace_alias"],
)

zkx_cc_library(
    name = "memory_allocator",
    hdrs = ["memory_allocator.h"],
    deps = [
        ":memory_allocation",
        "@com_google_absl//absl/status:statusor",
    ],
)

zkx_cc_library(
    name = "module_spec",
    hdrs = ["module_spec.h"],
    deps = [
        ":namespace_alias",
        "@com_google_absl//absl/hash",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "namespace_alias",
    hdrs = ["namespace_alias.h"],
    visibility = ["//visibility:private"],
)

zkx_cc_library(
    name = "platform",
    srcs = ["platform.cc"],
    hdrs = ["platform.h"],
    deps = [
        ":device_description",
        "@com_google_absl//absl/status:statusor",
    ],
)

zkx_cc_library(
    name = "platform_manager",
    srcs = ["platform_manager.cc"],
    hdrs = ["platform_manager.h"],
    deps = [
        ":platform",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/synchronization",
    ],
)

zkx_cc_library(
    name = "semantic_version",
    srcs = ["semantic_version.cc"],
    hdrs = ["semantic_version.h"],
    deps = [
        ":namespace_alias",
        "//xla/tsl/platform:statusor",
        "@com_google_absl//absl/hash",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

zkx_cc_library(
    name = "stream",
    hdrs = ["stream.h"],
    deps = [
        ":device_memory",
        ":event",
        ":event_based_timer",
        ":launch_dim",
        ":platform",
        "@com_google_absl//absl/functional:any_invocable",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "stream_executor",
    hdrs = ["stream_executor.h"],
    deps = [
        ":activate_context",
        ":allocator_stats",
        ":command_buffer",
        ":device_description",
        ":device_memory",
        ":event",
        ":event_based_timer",
        ":kernel",
        ":kernel_spec",
        ":memory_allocation",
        ":memory_allocator",
        ":module_spec",
        ":platform",
        ":stream",
        "//zkx/base:logging",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_unittest(
    name = "stream_executor_unittests",
    srcs = [
        "bit_pattern_unittest.cc",
        "device_description_unittest.cc",
        "semantic_version_unittest.cc",
    ],
    deps = [
        ":bit_pattern",
        ":device_description",
        ":semantic_version",
        "@com_google_absl//absl/hash:hash_testing",
    ],
)
