load("//bazel:zkx_cc.bzl", "zkx_cc_library")

package(default_visibility = ["//visibility:public"])

zkx_cc_library(
    name = "literal_test_util",
    testonly = True,
    srcs = ["literal_test_util.cc"],
    hdrs = ["literal_test_util.h"],
    deps = [
        "//zkx:literal",
        "//zkx:literal_comparison",
        "@com_google_googletest//:gtest",
    ],
)

zkx_cc_library(
    name = "test_utils",
    srcs = ["test_utils.cc"],
    hdrs = ["test_utils.h"],
    deps = [
        "//zkx:literal_util",
        "//zkx/hlo/analysis:hlo_dataflow_analysis",
        "//zkx/hlo/ir:hlo",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//:protobuf",
    ],
)
