load("//bazel:zkx_cc.bzl", "zkx_cc_library")

package(default_visibility = ["//visibility:public"])

zkx_cc_library(
    name = "hlo_runner_agnostic_test_base",
    testonly = True,
    srcs = ["hlo_runner_agnostic_test_base.cc"],
    hdrs = ["hlo_runner_agnostic_test_base.h"],
    deps = [
        ":literal_test_util",
        ":test_utils",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "//zkx:literal",
        "//zkx:util",
        "//zkx:zkx_data_cc_proto",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/parser:hlo_parser",
        "//zkx/hlo/testlib:hlo_hardware_independent_test_base",
        "//zkx/hlo/testlib:verified_hlo_module",
        "//zkx/service:computation_placer",
        "//zkx/service:executable",
        "//zkx/service:hlo_module_config",
        "//zkx/service:hlo_module_util",
        "//zkx/service:hlo_runner_interface",
        "//zkx/service:hlo_verifier",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/base:nullability",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@com_google_googletest//:gtest",
        "@com_google_protobuf//:protobuf",
        "@llvm-project//llvm:Support",
    ],
)

zkx_cc_library(
    name = "literal_test_util",
    testonly = True,
    srcs = ["literal_test_util.cc"],
    hdrs = ["literal_test_util.h"],
    deps = [
        "//zkx:literal",
        "//zkx:literal_comparison",
        "@com_google_googletest//:gtest",
    ],
)

zkx_cc_library(
    name = "test_utils",
    srcs = ["test_utils.cc"],
    hdrs = ["test_utils.h"],
    deps = [
        "//zkx:literal_util",
        "//zkx/hlo/analysis:hlo_dataflow_analysis",
        "//zkx/hlo/ir:hlo",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//:protobuf",
    ],
)
