# Copyright 2025 The ZKX Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("//bazel:zkx_cc.bzl", "zkx_cc_library")
load("//zkx/tests:build_defs.bzl", "generate_backend_test_macros")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "test_macros_header",
    testonly = True,
    hdrs = ["test_macros.h"],
)

# Generate a test_macros_${BACKEND} library per backend with the proper copts.
generate_backend_test_macros()

zkx_cc_library(
    name = "hlo_runner_agnostic_reference_mixin",
    testonly = True,
    srcs = ["hlo_runner_agnostic_reference_mixin.cc"],
    hdrs = ["hlo_runner_agnostic_reference_mixin.h"],
    deps = [
        ":hlo_runner_agnostic_test_base",
        ":literal_test_util",
        ":test_utils",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "//zkx:literal",
        "//zkx:shape_util",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/testlib:verified_hlo_module",
        "//zkx/service:hlo_runner_interface",
        "@com_google_absl//absl/base:nullability",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/types:span",
        "@com_google_googletest//:gtest",
    ],
)

zkx_cc_library(
    name = "hlo_runner_agnostic_test_base",
    testonly = True,
    srcs = ["hlo_runner_agnostic_test_base.cc"],
    hdrs = ["hlo_runner_agnostic_test_base.h"],
    deps = [
        ":literal_test_util",
        ":test_utils",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "//zkx:literal",
        "//zkx:util",
        "//zkx:zkx_data_cc_proto",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/parser:hlo_parser",
        "//zkx/hlo/testlib:hlo_hardware_independent_test_base",
        "//zkx/hlo/testlib:verified_hlo_module",
        "//zkx/service:computation_placer",
        "//zkx/service:executable",
        "//zkx/service:hlo_module_config",
        "//zkx/service:hlo_module_util",
        "//zkx/service:hlo_runner_interface",
        "//zkx/service:hlo_verifier",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/base:nullability",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@com_google_googletest//:gtest",
        "@com_google_protobuf//:protobuf",
        "@llvm-project//llvm:Support",
    ],
)

zkx_cc_library(
    name = "hlo_test_base",
    testonly = True,
    srcs = ["hlo_test_base.cc"],
    hdrs = ["hlo_test_base.h"],
    deps = [
        ":hlo_runner_agnostic_reference_mixin",
        ":hlo_runner_agnostic_test_base",
        ":pjrt_client_registry",
        "//xla/tsl/platform:status",
        "//xla/tsl/platform:statusor",
        "//zkx:literal",
        "//zkx:util",
        "//zkx:zkx_data_cc_proto",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/testlib:file_check",
        "//zkx/pjrt:pjrt_client",
        "//zkx/service:backend",
        "//zkx/service:computation_placer",
        "//zkx/service:hlo_runner",
        "//zkx/service:hlo_runner_interface",
        "//zkx/service:hlo_runner_pjrt",
        "//zkx/service:interpreter_plugin",
        "//zkx/service:platform_util",
        "//zkx/stream_executor:device_memory_allocator",
        "//zkx/stream_executor:platform",
        "//zkx/stream_executor:stream_executor_memory_allocator",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest",
    ],
)

zkx_cc_library(
    name = "literal_test_util",
    testonly = True,
    srcs = ["literal_test_util.cc"],
    hdrs = ["literal_test_util.h"],
    deps = [
        "//zkx:literal",
        "//zkx:literal_comparison",
        "@com_google_googletest//:gtest",
    ],
)

zkx_cc_library(
    name = "test_utils",
    srcs = ["test_utils.cc"],
    hdrs = ["test_utils.h"],
    deps = [
        "//zkx:literal_util",
        "//zkx/hlo/analysis:hlo_dataflow_analysis",
        "//zkx/hlo/ir:hlo",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//:protobuf",
    ],
)

zkx_cc_library(
    name = "pjrt_client_registry",
    srcs = ["pjrt_client_registry.cc"],
    hdrs = ["pjrt_client_registry.h"],
    deps = [
        "//zkx:shape_util",
        "//zkx/pjrt:pjrt_client",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/debugging:leak_check",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/synchronization",
    ],
)
