# Description:
#   Stubs for dynamically loading CUDA.

load("@local_config_cuda//cuda:build_defs.bzl", "if_cuda_is_configured")
load("@rules_cc//cc:defs.bzl", "cc_library")
load("//xla/tsl:tsl.bzl", "if_cuda_libs")
load("//xla/tsl/cuda:stub.bzl", "cuda_stub")
load("//xla/tsl/platform:cuda_build_defs.bzl", "cuda_rpath_flags")

package(
    licenses = ["notice"],
)

cuda_stub(
    name = "cublas",
    srcs = ["cublas.symbols"],
)

cc_library(
    name = "cublas_stub",
    srcs = if_cuda_is_configured([
        "cublas_stub.cc",
        "cublas.tramp.S",
    ]),
    linkopts = if_cuda_is_configured(cuda_rpath_flags(
        "nvidia/cublas/lib",
    )),
    local_defines = [
        "IMPLIB_EXPORT_SHIMS=1",
    ],
    textual_hdrs = ["cublas.inc"],
    visibility = ["//visibility:public"],
    deps = if_cuda_is_configured([
        "//xla/tsl/platform:dso_loader",
        "//xla/tsl/platform:load_library",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/log",
        "@local_config_cuda//cuda:cuda_headers",
    ]),
)

alias(
    name = "cublas",  # buildifier: disable=duplicated-name
    actual = if_cuda_libs("@cuda_cublas//:cublas", ":cublas_stub"),
    visibility = ["//visibility:public"],
)

cuda_stub(
    name = "cublasLt",
    srcs = ["cublasLt.symbols"],
)

cc_library(
    name = "cublas_lt_stub",
    srcs = if_cuda_is_configured([
        "cublasLt_stub.cc",
        "cublasLt.tramp.S",
    ]),
    local_defines = [
        "IMPLIB_EXPORT_SHIMS=1",
    ],
    textual_hdrs = ["cublasLt.inc"],
    visibility = ["//visibility:public"],
    deps = if_cuda_is_configured([
        "//xla/tsl/platform:dso_loader",
        "//xla/tsl/platform:load_library",
        "@com_google_absl//absl/log:check",
        "@local_config_cuda//cuda:cuda_headers",
    ]),
)

alias(
    name = "cublas_lt",
    actual = if_cuda_libs("@cuda_cublas//:cublasLt", ":cublas_lt_stub"),
    visibility = ["//visibility:public"],
)

cuda_stub(
    name = "cuda",
    srcs = ["cuda.symbols"],
)

cc_library(
    name = "cuda",  # buildifier: disable=duplicated-name
    srcs = if_cuda_is_configured([
        "cuda_stub.cc",
        "cuda.tramp.S",
    ]),
    local_defines = [
        "IMPLIB_EXPORT_SHIMS=1",
    ],
    textual_hdrs = ["cuda.inc"],
    visibility = ["//visibility:public"],
    deps = if_cuda_is_configured([
        "//xla/tsl/platform:dso_loader",
        "//xla/tsl/platform:load_library",
        "@com_google_absl//absl/log:check",
        "@local_config_cuda//cuda:cuda_headers",
    ]),
)

cuda_stub(
    name = "cudart",
    srcs = ["cudart.symbols"],
)

cc_library(
    name = "cudart_stub",
    srcs = if_cuda_is_configured([
        "cudart.tramp.S",
        "cudart_stub.cc",
    ]),
    linkopts = if_cuda_is_configured(cuda_rpath_flags("nvidia/cuda_runtime/lib")),
    local_defines = [
        "IMPLIB_EXPORT_SHIMS=1",
    ],
    textual_hdrs = ["cudart.inc"],
    visibility = ["//visibility:public"],
    deps = if_cuda_is_configured([
        ":cuda",
        "//xla/tsl/platform:dso_loader",
        "//xla/tsl/platform:load_library",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@local_config_cuda//cuda:cuda_headers",
    ]),
)

alias(
    name = "cudart",  # buildifier: disable=duplicated-name
    actual = if_cuda_libs("@cuda_cudart//:cudart", ":cudart_stub"),
    visibility = ["//visibility:public"],
)

# TODO(chokobole): Uncomment this. Dependency: nccl
# cc_library(
#     name = "nccl_rpath_flags",
#     linkopts = if_cuda_is_configured(cuda_rpath_flags("nvidia/nccl/lib")),
#     visibility = ["//visibility:public"],
# )

# alias(
#     name = "nccl_rpath",
#     actual = if_cuda_libs("@cuda_nccl//:nccl", ":nccl_rpath_flags"),
#     visibility = ["//visibility:public"],
# )

cc_library(
    name = "tensorrt_rpath",
    linkopts = if_cuda_is_configured(cuda_rpath_flags("tensorrt")),
    visibility = ["//visibility:public"],
)

cuda_stub(
    name = "cupti",
    srcs = ["cupti.symbols"],
)

cc_library(
    name = "cupti_stub",
    srcs = if_cuda_is_configured([
        "cupti_stub.cc",
        "cupti.tramp.S",
    ]),
    data = if_cuda_is_configured(["@local_config_cuda//cuda:cupti_dsos"]),
    linkopts = if_cuda_is_configured(cuda_rpath_flags("nvidia/cuda_cupti/lib")),
    local_defines = [
        "IMPLIB_EXPORT_SHIMS=1",
    ],
    textual_hdrs = ["cupti.inc"],
    visibility = ["//visibility:public"],
    deps = if_cuda_is_configured([
        "//xla/tsl/platform:dso_loader",
        "//xla/tsl/platform:load_library",
        "@com_google_absl//absl/log:check",
        "@local_config_cuda//cuda:cuda_headers",
        "@local_config_cuda//cuda:cupti_headers",
    ]),
)

alias(
    name = "cupti",  # buildifier: disable=duplicated-name
    actual = if_cuda_libs("@cuda_cupti//:cupti", ":cupti_stub"),
    visibility = ["//visibility:public"],
)

cuda_stub(
    name = "cusparse",
    srcs = ["cusparse.symbols"],
)

cc_library(
    name = "cusparse_stub",
    srcs = if_cuda_is_configured([
        "cusparse_stub.cc",
        "cusparse.tramp.S",
    ]),
    linkopts = if_cuda_is_configured(cuda_rpath_flags("nvidia/cusparse/lib")),
    local_defines = [
        "IMPLIB_EXPORT_SHIMS=1",
    ],
    textual_hdrs = ["cusparse.inc"],
    visibility = ["//visibility:public"],
    deps = if_cuda_is_configured([
        "//xla/tsl/platform:dso_loader",
        "//xla/tsl/platform:load_library",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/log:check",
        "@local_config_cuda//cuda:cuda_headers",
    ]),
)

alias(
    name = "cusparse",  # buildifier: disable=duplicated-name
    actual = if_cuda_libs("@cuda_cusparse//:cusparse", ":cusparse_stub"),
    visibility = ["//visibility:public"],
)

# TODO(chokobole): Uncomment this. Dependency: nccl
# cuda_stub(
#     name = "nccl",
#     srcs = ["nccl.symbols"],
# )

# cc_library(
#     name = "nccl",  # buildifier: disable=duplicated-name
#     srcs = if_cuda_is_configured([
#         "nccl_stub.cc",
#         "nccl.tramp.S",
#     ]),
#     linkopts = if_cuda_is_configured(cuda_rpath_flags("nvidia/nccl/lib")),
#     local_defines = [
#         "IMPLIB_EXPORT_SHIMS=1",
#     ],
#     textual_hdrs = ["nccl.inc"],
#     visibility = ["//visibility:public"],
#     deps = if_cuda_is_configured([
#         "@com_google_absl//absl/container:flat_hash_set",
#         "@local_config_cuda//cuda:cuda_headers",
#         "@local_config_nccl//:nccl_headers",
#         "//xla/tsl/platform:dso_loader",
#         "//xla/tsl/platform:logging",
#         "//xla/tsl/platform:load_library",
#     ]),
# )

# alias(
#     name = "nccl_stub",  # buildifier: disable=duplicated-name
#     actual = if_cuda_libs("@cuda_nccl//:nccl", ":nccl"),
#     visibility = ["//visibility:public"],
# )
