load("//bazel:zkx_cc.bzl", "zkx_cc_library")

package(default_visibility = ["//visibility:public"])

zkx_cc_library(
    name = "call_options",
    srcs = ["call_options.cc"],
    hdrs = ["call_options.h"],
    deps = [
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/time",
    ],
)
