load("//bazel:zkx.bzl", "if_posix")
load("//bazel:zkx_cc.bzl", "zkx_cc_library", "zkx_cc_unittest")

package(default_visibility = ["//visibility:public"])

zkx_cc_library(
    name = "casts",
    hdrs = ["casts.h"],
)

zkx_cc_library(
    name = "env",
    srcs = ["env.cc"] + if_posix(["env_posix.cc"]),
    hdrs = ["env.h"],
    deps = [
        ":env_time",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/functional:any_invocable",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/synchronization",
    ],
)

zkx_cc_library(
    name = "env_time",
    srcs = if_posix(["env_time_posix.cc"]),
    hdrs = ["env_time.h"],
)

zkx_cc_library(
    name = "errors",
    srcs = ["errors.cc"],
    hdrs = ["errors.h"],
    deps = [
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

zkx_cc_library(
    name = "fingerprint",
    hdrs = ["fingerprint.h"],
    deps = [
        "@com_google_absl//absl/numeric:int128",
        "@farmhash_archive//:farmhash",
    ],
)

zkx_cc_library(
    name = "human_readable_json",
    srcs = ["human_readable_json.cc"],
    hdrs = ["human_readable_json.h"],
    deps = [
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//:protobuf",
    ],
)

zkx_cc_library(
    name = "mem",
    srcs = if_posix(["mem_posix.cc"]),
    hdrs = ["mem.h"],
)

zkx_cc_library(
    name = "status",
    srcs = ["status.cc"],
    hdrs = ["status.h"],
    deps = [
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/status",
    ],
)

zkx_cc_library(
    name = "statusor",
    hdrs = ["statusor.h"],
    deps = [
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/status:statusor",
    ],
)

zkx_cc_library(
    name = "thread_pool",
    srcs = ["thread_pool.cc"],
    hdrs = ["thread_pool.h"],
    deps = [
        ":env",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
        "@eigen_archive//:eigen3",
    ],
)

zkx_cc_unittest(
    name = "platform_unittests",
    srcs = ["fingerprint_unittest.cc"],
    deps = [":fingerprint"],
)
